# Photo-Searcher

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CoreAI.config  Dockerfile  Launch_MacOS.sh  README.md  docker-compose.yml  docs.md  launch_first_time.txt  package.json  requirements.txt  run_app.py  tsconfig.app.json  vite.config.ts
Backend/: manage.py  requirements.txt  run_app.py
Backend/liquid_photos/: __init__.py  asgi.py  env.py  settings.py  urls.py  wsgi.py
Backend/templates/: index.html
Backend/web/: admin.py  apps.py  models.py  people.py  services.py  telegram_bot.py  views.py
CoreAI/: README.md  __init__.py  embeddings.py  faces.py  runtime.py
CoreAI/nova_ai_shipping/: embeddings.py  faces.py
NovaAI-Shipping/: README.md
NovaAI-Shipping/nova_ai_shipping/: __init__.py  embeddings.py  faces.py  runtime.py
NovaAI_WIP/: .gitignore  README.md  pyproject.toml  requirements-gpu.txt
NovaAI_WIP/src/nova_ai_wip/: __main__.py  benchmark_hundred_images.py  benchmark_single_image.py  export_embeddings_txt.py  main.py  open_clip_smoke.py  semantic_search_cli.py
NovaAI_WIP/src/nova_ai_wip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
WebUI/: index.html  pnpm-lock.yaml
backend/: launch_first_time.txt  manage.py  requirements.txt
docker/: entrypoint.sh
liquid_photos/: __init__.py  settings.py  urls.py  wsgi.py
photo_ai/: __init__.py  faces.py  runtime.py
photo_searcher/: asgi.py  settings.py  urls.py
searcher_app/: apps.py
src/: App.tsx  styles.css
web/: apps.py  models.py  people.py  views.py
(+41 files in other folders)
